--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,8 @@ wrapper{
     box-shadow: 0 0 5px #333;
     border-radius:0.3em;
 }
+.card:hover{
+    transform: scale(1.05);
+    /* filter:drop-shadow(0 0 10px #333); */
+    transition: 0.3s;
+}
